--- a/static/html/index.ejs
+++ b/static/html/index.ejs
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/MaterialDesign-Webfont/2.4.85/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="css/app.css">
-	<!-- Regx | Author: sc0utz | Create: 06/27/18 | https://github.com/sc0utz/regx -->
+	<!-- Regx | Author: hhui64 | Create: 06/27/2018 | Edit: 04/04/2020  | https://github.com/hhui64/regx -->
 </head>
 <body>
 	<div class="main">
